# ds-utils

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  commands.sh  docker.sh  etc.sh  git.sh  install_kaggle_envs.sh  jupyter_import.py  ngrok.sh  pyproject.toml  redis.sh  setup.sh  setup_cuda_ubuntu1604.sh  setup_ubuntu1604.sh  sftp_config.py  tmux.sh  useful_linux_commands.sh
docs/: GPU.md  JUPYTER.md
ds_utils/: common.py  common_imports.py  data_utils.py  random.py  training_utils.py
scripts/: commands.sh  jupyter_import.py  pip_install_kaggle_envs.sh  poetry_setup.sh  setup_cuda_ubuntu1604.sh
