[tool.poetry]
name = "ds-utils"
version = "0.1.0"
description = "Repo containing useful codes for DS projects"
authors = ["hardianlawi <hardianlawi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl"}
pytorch-lightning = "^1.6.3"
pyarrow = "^7.0.0"
s3fs = "^2022.3.0"
seaborn = "^0.11.2"
transformers = "^4.18.0"

[tool.poetry.dev-dependencies]
nb-black = "^1.0.7"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
